background stretch fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -471,7 +471,7 @@
 
 @media screen and (max-width: 430px) {
     .services{
-        height: 1300px;
+        height: 1100px;
     }
 }
 
